--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,9 +11,13 @@
     <color name="text_primary">@color/black</color>
     <color name="text_secondary">@color/gray_dove</color>
     <color name="text_date">@color/gray_dove</color>
+    <color name="text_inactive">@color/gray_silver</color>
 
     <color name="bottom_nav_item_active">@color/accent</color>
     <color name="bottom_nav_item_inactive">@color/gray_silver</color>
+
+    <color name="button_follow">@color/blue_dodger</color>
+    <color name="button_following">@color/green_fern</color>
 
     <color name="button_upvote_background">@color/red_froly</color>
     <color name="button_thread_upvote_icon">@color/white</color>
@@ -22,13 +26,10 @@
     <color name="button_thread_icon">@color/accent</color>
     <color name="button_thread_text">@color/text_primary</color>
 
-    <color name="button_follow">@color/blue_dodger</color>
-    <color name="button_following">@color/green_fern</color>
-
-    <color name="progress_auth_background">@color/white_transparent_50</color>
     <color name="divider">@color/gray_athens</color>
+    <color name="progress_auth_background">@color/white_transparent_50</color>
 
-    <!-- Palette Colors -->
+    <!-- Palette Colors. Start -->
     <!-- Colors for "internal use" only -->
 
     <!-- General Palette -->
@@ -50,4 +51,6 @@
 
     <!-- Palette Green -->
     <color name="green_fern">#5FB66A</color>
+
+    <!-- Palette Colors. End -->
 </resources>
