--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,7 +60,7 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">?colorPrimary</item>
         <item name="backgroundTint">?colorSecondary</item>
-        <item name="iconSize">18dp</item>
+        <item name="iconSize">@dimen/button_icon_size</item>
     </style>
 
     <style name="ForumNumText" parent="Text.Primary">
@@ -81,7 +81,7 @@
         <item name="android:textColor">?colorOnSurface</item>
         <item name="android:textSize">14sp</item>
         <item name="iconPadding">@dimen/spacing_micro</item>
-        <item name="iconSize">18dp</item>
+        <item name="iconSize">@dimen/button_icon_size</item>
         <item name="iconTint">?colorSecondary</item>
         <item name="strokeColor">?colorSecondary</item>
         <item name="strokeWidth">1dp</item>
