--- a/app/src/main/res/layout/fragment_forum_flow.xml
+++ b/app/src/main/res/layout/fragment_forum_flow.xml
@@ -13,7 +13,8 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:elevation="0dp">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbar"
