Add "User Flow" screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,10 @@
         <item name="android:background">@color/transparent</item>
     </style>
 
+    <style name="AppToolbar.WithTabs">
+        <item name="android:elevation">0dp</item>
+    </style>
+
     <style name="AppTabLayout" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabIndicatorColor">?colorSecondary</item>
         <item name="tabSelectedTextColor">?colorSecondary</item>
