--- a/app/src/main/res/layout/fragment_user_flow.xml
+++ b/app/src/main/res/layout/fragment_user_flow.xml
@@ -30,6 +30,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.viewpager.widget.ViewPager
