--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,10 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <style name="UserDetailsText" parent="Text.Secondary">
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
 </resources>
