--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -103,4 +103,17 @@
         <item name="android:textColor">@color/text_primary</item>
     </style>
 
+    <style name="CommentVoteText" parent="Text.Primary">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="CommentVoteText.Upvote">
+        <item name="android:drawableEnd">@drawable/ic_arrow_upward</item>
+    </style>
+
+    <style name="CommentVoteText.Downvote">
+        <item name="android:drawableEnd">@drawable/ic_arrow_downward</item>
+    </style>
+
 </resources>
