--- a/app/src/main/res/layout/item_thread.xml
+++ b/app/src/main/res/layout/item_thread.xml
@@ -78,28 +78,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/contentImageView">
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/topicsChipGroup"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_normal"
-                app:chipSpacing="@dimen/spacing_small"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:id="@+id/titleTextView"
                 style="@style/Text.Primary"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_normal"
+                app:layout_constraintBottom_toTopOf="@id/topicChipGroup"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_goneMarginBottom="@dimen/spacing_normal"
+                tools:text="@tools:sample/lorem" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/topicChipGroup"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_normal"
                 android:layout_marginBottom="@dimen/spacing_normal"
+                app:chipSpacing="@dimen/spacing_small"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/topicsChipGroup"
-                tools:text="@tools:sample/lorem" />
+                app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
