--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,76 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/ListItem"
+    style="@style/AppCardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingStart="@dimen/spacing_normal"
-    android:paddingTop="@dimen/spacing_normal"
-    android:paddingEnd="@dimen/spacing_normal"
-    android:paddingBottom="10dp">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/authorImageView"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/spacing_normal"
+        android:paddingTop="@dimen/spacing_normal"
+        android:paddingEnd="@dimen/spacing_normal"
+        android:paddingBottom="10dp">
 
-    <TextView
-        android:id="@+id/authorTextView"
-        style="@style/Text.Primary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:textSize="@dimen/font_secondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/authorImageView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@tools:sample/full_names" />
+        <ImageView
+            android:id="@+id/authorImageView"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@tools:sample/avatars" />
 
-    <TextView
-        android:id="@+id/dateTextView"
-        style="@style/Text.Secondary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:textSize="@dimen/font_small"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/authorTextView"
-        app:layout_constraintTop_toBottomOf="@id/authorTextView"
-        tools:text="@tools:sample/date/ddmmyy" />
+        <TextView
+            android:id="@+id/authorTextView"
+            style="@style/Text.Primary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:textSize="@dimen/font_secondary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/authorImageView"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@tools:sample/full_names" />
 
-    <TextView
-        android:id="@+id/messageTextView"
-        style="@style/Text.Secondary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/authorTextView"
-        app:layout_constraintTop_toBottomOf="@id/dateTextView"
-        tools:maxLines="4"
-        tools:text="@tools:sample/lorem/random" />
+        <TextView
+            android:id="@+id/dateTextView"
+            style="@style/Text.Secondary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textSize="@dimen/font_small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/authorTextView"
+            app:layout_constraintTop_toBottomOf="@id/authorTextView"
+            tools:text="@tools:sample/date/ddmmyy" />
 
-    <TextView
-        android:id="@+id/upvoteTextView"
-        style="@style/CommentVoteText.Upvote"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/authorTextView"
-        app:layout_constraintTop_toBottomOf="@id/messageTextView" />
+        <TextView
+            android:id="@+id/messageTextView"
+            style="@style/Text.Secondary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/authorTextView"
+            app:layout_constraintTop_toBottomOf="@id/dateTextView"
+            tools:maxLines="4"
+            tools:text="@tools:sample/lorem/random" />
 
-    <TextView
-        android:id="@+id/downvoteTextView"
-        style="@style/CommentVoteText.Downvote"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_small"
-        app:layout_constraintStart_toEndOf="@id/upvoteTextView"
-        app:layout_constraintTop_toTopOf="@id/upvoteTextView" />
+        <TextView
+            android:id="@+id/upvoteTextView"
+            style="@style/CommentVoteText.Upvote"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="@id/authorTextView"
+            app:layout_constraintTop_toBottomOf="@id/messageTextView" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/downvoteTextView"
+            style="@style/CommentVoteText.Downvote"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_small"
+            app:layout_constraintStart_toEndOf="@id/upvoteTextView"
+            app:layout_constraintTop_toTopOf="@id/upvoteTextView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
