--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,6 +97,14 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <style name="ThreadDetailsTitle" parent="Text.Primary">
+        <item name="android:textSize">@dimen/font_large</item>
+    </style>
+
+    <style name="ThreadDetailsMessage" parent="Text.Secondary">
+        <item name="android:textColor">?colorOnSurface</item>
+    </style>
+
     <style name="UserDetailsText" parent="Text.Secondary">
         <item name="android:drawablePadding">10dp</item>
         <item name="android:gravity">center_vertical</item>
