--- a/app/src/main/res/layout/item_thread.xml
+++ b/app/src/main/res/layout/item_thread.xml
@@ -80,8 +80,8 @@
 
             <TextView
                 android:id="@+id/titleTextView"
-                style="@style/Text.Primary"
                 android:layout_width="0dp"
+                android:textAppearance="@style/Text.Primary"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_normal"
                 app:layout_constraintBottom_toTopOf="@id/topicChipGroup"
