--- a/app/src/main/res/layout/fragment_forum_discussions.xml
+++ b/app/src/main/res/layout/fragment_forum_discussions.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/threadsSwipeRefresh"
+        android:id="@+id/discussionsSwipeRefresh"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/threadsRecyclerView"
+            android:id="@+id/discussionsRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
@@ -25,7 +25,7 @@
             android:paddingBottom="@dimen/spacing_content_vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="2"
-            tools:listitem="@layout/item_thread" />
+            tools:listitem="@layout/item_discussion" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
