--- a/app/src/main/res/layout/fragment_forum_discussions_container.xml
+++ b/app/src/main/res/layout/fragment_forum_discussions_container.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/threadsPager"
+        android:id="@+id/discussionsPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
