--- a/app/src/main/res/layout/item_discussion.xml
+++ b/app/src/main/res/layout/item_discussion.xml
@@ -119,7 +119,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/voteButton"
-                style="@style/ThreadButton"
+                style="@style/DiscussionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_favorite"
@@ -129,7 +129,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/commentsButton"
-                style="@style/ThreadButton"
+                style="@style/DiscussionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_normal"
