--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,7 +83,7 @@
         <item name="chipStrokeWidth">1dp</item>
     </style>
 
-    <style name="ThreadButton" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+    <style name="DiscussionButton" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:minWidth">66dp</item>
         <item name="android:paddingStart">@dimen/spacing_small</item>
@@ -97,11 +97,11 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
-    <style name="ThreadDetailsTitle" parent="Text.Primary">
+    <style name="DiscussionDetailsTitle" parent="Text.Primary">
         <item name="android:textSize">@dimen/font_large</item>
     </style>
 
-    <style name="ThreadDetailsMessage" parent="Text.Secondary">
+    <style name="DiscussionDetailsMessage" parent="Text.Secondary">
         <item name="android:textColor">?colorOnSurface</item>
     </style>
 
