--- a/app/src/main/res/layout/fragment_main_host.xml
+++ b/app/src/main/res/layout/fragment_main_host.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/mainContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/mainBottomNavView"
@@ -20,6 +20,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/main_flow_bottom_nav" />
+        app:menu="@menu/main_host_bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
