--- a/app/src/main/res/layout/fragment_forum_host.xml
+++ b/app/src/main/res/layout/fragment_forum_host.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:contentScrim="?colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollFlags="scroll|enterAlways"
                 tools:title="@tools:sample/first_names">
 
                 <ImageView
