Add "My Profile" screen

--- a/app/src/main/res/menu/main_host_bottom_nav.xml
+++ b/app/src/main/res/menu/main_host_bottom_nav.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_forum"
         android:title="@string/main_host_my_forums" />
 
+    <item
+        android:id="@+id/menu_bottom_nav_my_profile"
+        android:icon="@drawable/ic_account_circle"
+        android:title="@string/main_host_my_profile" />
+
 </menu>
