--- a/app/src/main/res/layout/layout_empty_data.xml
+++ b/app/src/main/res/layout/layout_empty_data.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableTop="@drawable/img_empty_box"
+        android:drawableTop="@drawable/img_empty_data"
         android:gravity="center"
         android:text="@string/msg_empty_data" />
 
