Move tinting "Follow" button from setting programmatically to button's style

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,6 +65,7 @@
         <item name="android:textColor">?colorPrimary</item>
         <item name="backgroundTint">?colorSecondary</item>
         <item name="iconSize">@dimen/button_icon_size</item>
+        <item name="iconTint">?colorPrimary</item>
     </style>
 
     <style name="ForumNumText" parent="Text.Primary">
